--- a/docs/equinor.css
+++ b/docs/equinor.css
@@ -22,6 +22,7 @@
   --heritage-red: #7d0023;
   --moss-green: #007079;
   --mist-blue: #D5EAF4;
+  --rain-blue: #39b8f3;
   --spruce-wood: #FFE7D6;
   --lichen-green: #E6FAEC;
 }
@@ -69,7 +70,7 @@ body {
 }
 
 .reveal h1 {
-  color: var(--mist-blue);
+  color: var(--energy-red);
   font-size: 90px;
   text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
 }
@@ -104,6 +105,70 @@ body {
 .reveal .roll span:after {
   color: #ff26a4;
   background: #f2f2f3;
+}
+
+/********************************************
+* Ammendments by marmid
+*********************************************/
+
+.air-list {
+  text-align: left;
+  line-height: 2;
+}
+
+.narrow-list {
+  line-height: 1;
+  font-size: 1rem;
+  text-align: left;
+}
+
+.reveal table {
+  border: var(--moss-green) solid;
+  background-color: var(--mist-blue);
+  color: var(--slate-blue);
+  font-size: 1.5rem;
+}
+.copy-left {
+  background-color: var(--rain-blue);
+}
+
+.table-column-left {
+  text-align: left;
+}
+
+.table-column-width {
+  width: 15rem;
+}
+
+.license-can {
+  background-color: darkgreen;
+}
+
+.license-cannot {
+  background-color: darkred;
+}
+
+.license-must {
+  background-color: darkblue;
+}
+
+.license-undefined {
+  background-color: var(--mist-blue);
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+}
+
+.box {
+  background-color: var(--moss-green);
+  text-align: left;
+  margin: 0.5rem;
+  padding: 1rem;
+  
 }
 
 /*********************************************
