--- a/docs/equinor.css
+++ b/docs/equinor.css
@@ -71,16 +71,25 @@ body {
 
 .reveal h1 {
   color: var(--energy-red);
-  font-size: 90px;
+  font-size: 70px;
   text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
 }
 
 .reveal h2 {
   font-size: 50px;
+  color: var(--moss-green);
 }
 
 .reveal h3 {
   font-size: 36px;
+}
+
+.reveal h4 {
+  font-size: 24px;
+}
+.reveal p {
+  font-size: 24px;
+  margin: 16px;
 }
 
 /*********************************************
@@ -118,7 +127,7 @@ body {
 
 .narrow-list {
   line-height: 1;
-  font-size: 1rem;
+  font-size: 12px;
   text-align: left;
 }
 
@@ -170,6 +179,26 @@ body {
   padding: 1rem;
   
 }
+
+.box-list {
+  background-color: var(--moss-green);
+  text-align: center;
+  font-size: 24px;
+  margin: 0.5rem;
+  padding: 1rem;
+}
+
+.box-list p {
+  margin: 0;
+}
+
+.code {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 16px;
+  margin: 8px;
+  color: var(--spruce-wood);
+}
+
 
 /*********************************************
  * IMAGES
