--- a/docs/equinor.css
+++ b/docs/equinor.css
@@ -262,6 +262,54 @@ body {
 .photo-credit {
   font-size: 8px;
 }
+
+
+.container {
+  height: 300px;
+  margin: 2rem;
+  display: grid;
+  grid-gap: 10px 10px;
+  grid-template-columns: 6fr 1fr 6fr;
+  grid-template-rows: 1fr 5fr 5fr 5fr;
+}
+.cell {
+  color: white;
+  font-size: 3rem;
+  text-align: center;
+  padding: 4rem;
+}
+.cell-1 {
+  background: deepskyblue;
+  grid-row: 1;
+  grid-column: 1/4;
+}
+.cell-2 {
+  background: orangered;
+}
+.cell-3 {
+  background: royalblue;
+}
+.cell-4 {
+  background: gold;
+}
+.cell-5 {
+  background: blueviolet;
+}
+.cell-6 {
+  background: limegreen;
+}
+.cell-7 {
+  background: coral;
+}
+.cell-8 {
+  background: lightseagreen;
+}
+.cell-9 {
+  background: maroon;
+}
+
+
+
 /*********************************************
                   
  * IMAGES
