--- a/docs/equinor.css
+++ b/docs/equinor.css
@@ -25,6 +25,7 @@
   --rain-blue: #39b8f3;
   --spruce-wood: #FFE7D6;
   --lichen-green: #E6FAEC;
+  --pink: #ff26a4;
 }
 
 /*********************************************
@@ -70,22 +71,29 @@ body {
 }
 
 .reveal h1 {
-  color: var(--energy-red);
+  color: var(--pink);
   font-size: 70px;
-  text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
+  //text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
 }
 
 .reveal h2 {
   font-size: 50px;
-  color: var(--moss-green);
+  color: var(--rain-blue);
 }
 
 .reveal h3 {
   font-size: 36px;
+  
 }
 
 .reveal h4 {
   font-size: 24px;
+  color: var(--rain-blue);
+}
+
+.reveal h5 {
+  
+  font-size: 18px;
 }
 .reveal p {
   font-size: 24px;
@@ -264,7 +272,7 @@ body {
 }
 
 
-.container {
+.grid-container {
   height: 300px;
   margin: 2rem;
   display: grid;
